# modops

./: .gitignore  README.md
benchmarking/: Cargo.toml
benchmarking/benches/: expmod_benchmark.rs
benchmarking/src/: lib.rs
circommul/multiplier2_js/: multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau  proof.json  verification_key.json  verifier.sol
circommul/rust_verifier/: get_input.py  verify.sh
circommul/rust_verifier/verifier/: .gitignore  package-lock.json  package.json
circommul/rust_verifier/verifier/contract/: Cargo.toml
circommul/rust_verifier/verifier/contract/src/: lib.rs
modexp/testing/: Cargo.toml
modexp/testing/src/: main.rs
modmul/: a.out  modmul.cpp  out.csv
src/: lib.rs
