[package]
name = "expmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }

[dev-dependencies]
criterion = "0.3"
rand = "0.8.5"

[[bench]]
name = "expmod_benchmark"
harness = false