[package]
name = "expmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
hex = "0.4.3"
bytes = { version = "1", features = ["serde"] }
arrayref = "0.3"